--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,8 @@ documentation = "https://github.com/ngozzi/epydemix"
 
 [tool.setuptools]
 # Use the find_packages mechanism with proper configuration
-package-dir = { "" = "src" }  
-packages = { find = { where = ["src"] } }
+package-dir = { "" = "epydemix" }  
+packages = { find = { where = ["epydemix"] } }
 include-package-data = true
 
 [tool.pytest.ini_options]
