--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,31 +1,24 @@
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
 version: 2
 
+# Set the OS, Python version, and other tools you might need
 build:
-  os: ubuntu-22.04
+  os: ubuntu-24.04
   tools:
-    python: "3.10"
+    python: "3.6"
 
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
-  configuration: docs/source/conf.py
+   builder: html
+   configuration: docs/source/conf.py
+   fail_on_warning: true
 
+# Optionally, but recommended,
+# declare the Python requirements required to build your documentation
+# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
-  install:
+    install:
     - requirements: docs/requirements.txt
-
-# Mock imports if autodoc fails due to missing packages
-sphinx:
-  builder: html
-  configuration: docs/source/conf.py
-  fail_on_warning: true
-
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.10"
-
-python:
-  install:
-    - requirements: docs/requirements.txt
-
-# Mock imports for unavailable dependencies
-  system_packages: true
