--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,9 @@
 sphinx
 sphinx-rtd-theme
+evalidate==2.0.3
+matplotlib==3.7.3
+numpy==1.23.5
+pandas==2.0.3
+scipy==1.10.1
+seaborn==0.13.2
+setuptools==68.2.0
