--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,14 +1,20 @@
-# Read the Docs configuration file
 version: 2
 
 build:
   os: ubuntu-24.04
-  tools:
-    python: "3.11"
+  #tools:
+  #  python: "3.11"
+
+#python:
+#    install:
+#    - requirements: docs/requirements.txt
+
+python:
+  version: 3.11
+  install:
+    - requirements: requirements.txt
+    - method: pip
+      path: .
 
 sphinx:
    configuration: docs/source/conf.py
-
-python:
-    install:
-    - requirements: docs/requirements.txt
