--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,15 +2,14 @@ version: 2
 
 build:
   os: ubuntu-24.04
-  #tools:
-  #  python: "3.11"
+  tools:
+    python: "3.11"
 
 #python:
 #    install:
 #    - requirements: docs/requirements.txt
 
 python:
-  version: 3.11
   install:
     - requirements: requirements.txt
     - method: pip
